<resources>
    <string name="app_name">Texfit</string>
    <string name="settings_title">Настройки</string>
    <string name="menu_folder">Папка</string>
    <string name="menu_file">Файл</string>
    <string name="menu_refresh">Обновить папку</string>
    <string name="menu_sort">Сортировать</string>
    <string name="menu_backup">Backup</string>
    <string name="folder_selected">Папка не выбрана</string>
    <string name="file_not_mp4">Выберите MP4 файл</string>
    <string name="no_active_exercises">Нет активных упражнений</string>
    <string name="files_found_count">Найдено файлов: %d</string>
    <string name="updated">Обновлено</string>
    <string name="time_default">00:00</string>
    <string name="empty_option">--</string>
    <string name="select_session_first">Сначала выберите сеанс</string>
    <string name="select_exercise_first">Сначала выберите упражнение</string>
    <string name="files_not_found">Файлы не найдены</string>
    <string name="note_title">Заметка</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_save">Сохранить</string>
    <string name="exercise_title_format">Упражнение: %s</string>
    <string name="delete_option_title">Удалить запись?</string>
    <string name="new_session">Новый сеанс</string>
    <string name="select_number">Выберите номер</string>
    <string name="name_hint">Введите название</string>
    <string name="new_exercise">Новое упражнение</string>
    <string name="exercise_name_hint">Введите название</string>
    <string name="add_folder">Добавить папку</string>
    <string name="color_indicator">Индикатор</string>
    <string name="action_settings">Настройки</string>
    <string name="delete">Удалить</string>
    <string name="label_position">Позиция:</string>
    <string name="label_reset_to">Сброс на:</string>
    <string name="dialog_title_name">Название</string>
    <string name="session_no_not_selected">№ не выбран</string>
    <string name="session_number_selected">Выбран № %s</string>

    <string name="backup_create">Создать бэкап</string>
    <string name="backup_restore">Восстановить из существующих</string>
    <string name="backup_not_found">Бэкапы не найдены</string>
    <string name="backup_select_file">Выберите файл</string>
    <string name="backup_created">Backup создан: %s</string>
    <string name="backup_restored">Восстановлено из %s</string>
    <string name="sorted_msg">Отсортировано</string>
    
    <string name="header_session">Сеанс</string>
    <string name="header_exercise">Упражнение</string>
    <string name="header_name">Название</string>
    <string name="header_size_label">Размер</string>
    <string name="header_note_label">Прим.</string>
    <string name="header_num">№</string>

    <string name="btn_launch">Запуск</string>
    <string name="pause_label">ПАУЗА</string>
    <string name="stopwatch_label">СЕКУНДОМЕР</string>
    <string name="stopwatch_stop">СТОП</string>
    <string name="error_set_max_first">Сначала задайте MAX</string>
    <string name="file_number_format">№ файла %s</string>
    <string name="multiplier_range">1-10</string>
    <string name="saved_msg">Сохранено</string>
    <string name="reset_all">Сбросить все</string>
    <string name="delete_all">Удалить все</string>
    <string name="all_timings_reset">Все тайминги сброшены</string>
    <string name="all_timings_deleted">Тайминги удалены</string>
    
    <string name="label_limit_max">ЛИМИТ (MAX):</string>
    <string name="label_step_increment">ШАГ ПРИБАВКИ:</string>
    <string name="label_multiplier">Множитель:</string>
    <string name="btn_general_settings">Общие настройки</string>
    <string name="switch_enable">Включить</string>

    <string name="error_permission">Ошибка прав</string>
    <string name="error_loading">Ошибка загрузки</string>
    <string name="error_reading">Ошибка чтения</string>
    <string name="error_saving">Ошибка сохранения</string>
    <string name="error_playlist_loading">Ошибка загрузки плейлиста</string>
    <string name="error_status_saving">Ошибка сохранения статуса</string>
    
    <string name="unit_b">Б</string>
    <string name="unit_kb">КБ</string>
    <string name="unit_mb">МБ</string>
    <string name="unit_gb">ГБ</string>
    <string name="unit_tb">ТБ</string>
    <string name="unnamed">Без имени</string>

    <string name="fill_all_fields">Сначала заполните все поля</string>
    <string name="loading_data">Загрузка...</string>

    <string name="help_title">Справка</string>
    <string name="help_text">
        TexFit v2.0
&lt;br&gt;
&lt;br&gt;
&lt;b&gt; TexFit &lt;/b&gt; — это приложение для управления тренировками.
        &lt;br&gt; Каждый день после заданного времени формирует из ваших видеофайлов плейлист на текущий день.
        &lt;br&gt; Есть возможность зациклить какое-либо упражнение прямо внутри видео (например, если тренер приседает 5 минут, а вам нужно 10).
        &lt;br&gt; Либо наоборот - сократить длительность упражнения (в видео приседают 20 минут, а нужно 10).
        &lt;br&gt; Плеер будет крутить этот отрезок видео столько, сколько будет задано.

        &lt;br&gt; &lt;b&gt; Самое главное &lt;/b&gt; - так как каждому нужна разная нагрузка, было решено отталкиваться не от количества упражнений (10 приседаний), а от длительности выполнения (10 приседаний за 30 секунд).
        &lt;br&gt; Для этого в плеере есть Секундомер, предварительно можно замерить и настроить как нужно.

        &lt;br&gt; &lt;br&gt; Приложение &lt;b&gt; специально &lt;/b&gt; написано для &lt;b&gt; устаревших &lt;/b&gt; телефонов и планшетов, чтобы дать им шанс прослужить дольше. Для android 7.0 - android 15

        &lt;br&gt; &lt;br&gt; &lt;b&gt; Самое основное: &lt;/b&gt;
        &lt;br&gt; \t - закидываем одно или несколько видео с тренировкой в формате &lt;b&gt; ".mp4" &lt;/b&gt; в папку
        &lt;br&gt; \t - выбираем эту папку через &lt;b&gt; [+] &lt;/b&gt; (кнопка Добавить), затем - кнопку  &lt;b&gt; Обновить &lt;/b&gt;
        &lt;br&gt; \t - при работе с файлами можно пользоваться ниспадающими списками. Достаточно  &lt;b&gt; один раз &lt;/b&gt; ввести значение, а затем его просто выбирать
        &lt;br&gt; \t - задаем в таблице номер и имя &lt;b&gt; сеанса &lt;/b&gt; (например: 1 Утро, 2 День)
        &lt;br&gt; \t - придумываем номер и название  &lt;b&gt; упражнения &lt;/b&gt;  (01 Зарядка, 02 Приседания). Номер - это очередность выполнения, сначала делаем Зарядку, затем Приседания
        &lt;br&gt; \t - задаем номер для  &lt;b&gt; файла  &lt;/b&gt; в нужном порядке
        &lt;br&gt; \t - чтобы файл участвовал в выборке, нужно активировать строку, нажав на  &lt;b&gt; цветную ячейку  &lt;/b&gt; в первом столбце. Ячейка станет  &lt;b&gt; зеленой &lt;/b&gt;
        &lt;br&gt; \t - правильно заполненая строка подсвечивается &lt;b&gt; зеленым &lt;/b&gt; цветом, незаполненая строка и не участвующая в выборке - &lt;b&gt; красным &lt;/b&gt;
        &lt;br&gt; \t \t Благодаря &lt;b&gt; нумерации &lt;/b&gt;, записанные как угодно упражнения автоматически отсортируются в нужном порядке
        &lt;br&gt; \t - если файлов для какого-либо упражнения &lt;b&gt; несколько &lt;/b&gt; (например, 3 вида приседаний и нужно их чередовать) - задаем номер файла для очередности (001 приседание1.mp4, 002 приседание2.mp4, 003 приседание3.mp4)
        &lt;br&gt; \t - как только количество файлов для определённого упражнения  закончится, цикл начнется заново с &lt;b&gt; первого &lt;/b&gt; файла
        &lt;br&gt; \t - внизу в поле установки времени задаем &lt;b&gt; время &lt;/b&gt;, после которого будет срабатывать запуск (при первом открытии приложения в этот день)
        &lt;br&gt; \t - нажатие на превью открывает видео в режиме паузы, для &lt;b&gt; воспроизведения/паузы &lt;/b&gt; нажать в любом месте экрана
        &lt;br&gt; \t - на превью внизу можно &lt;b&gt; галочкой &lt;/b&gt; отметить видео просмотренным. Ни на что не влияет, просто для удобства
        &lt;br&gt; Всё

        &lt;br&gt; &lt;br&gt; &lt;b&gt; Дополнительные возможности и лайфхаки: &lt;/b&gt;
        &lt;br&gt; В &lt;b&gt; Окне настроек &lt;/b&gt; при нажатии на ячейке с названием файла открывается &lt;b&gt; плеер &lt;/b&gt; для более тонкой настройки:
        &lt;br&gt; \t 1. В плеере есть  &lt;b&gt; полоса прокрутки:  &lt;/b&gt; если в видео много разных упражнений, для каждого можно установить свой тайминг.
        &lt;br&gt; \t 2. Если  &lt;b&gt; Лимит (max)  &lt;/b&gt; оставить 00:00, то плеер мгновенно пропустит этот отрезок не проиграв. То есть можно автоматически пропускать отдельные участки видео (полезно для длинных вступлений).
        &lt;br&gt; \t 3. &lt;b&gt; Шаг прибавки &lt;/b&gt; нужен для постепенного увеличения нагрузки. Пример:
        &lt;br&gt; \t \t 100 приседаний занимает 20 минут (наш Лимит (max))
        &lt;br&gt; \t \t Так как для начинающих такая нагрузка сразу нежелательна, можно замерить и установить  &lt;b&gt; шаг &lt;/b&gt; для 10 приседаний (например, комфортные 2 минуты)
        &lt;br&gt; \t \t Теперь, каждый раз при попадании данного видео в плейлист, выполнение текущего упражнения будет  &lt;b&gt; удлиняться &lt;/b&gt;  на 2 минуты (например, каждый день будет прибавляться около 10 приседаний, пока не достигнем установленного лимита в 20 минут).
        &lt;br&gt; \t 4. Если наращивания времени не нужно, то Лимит (max) и Шаг прибавки делать  &lt;b&gt; одинаковым &lt;/b&gt; .
        &lt;br&gt; \t 5. &lt;b&gt; Множитель &lt;/b&gt; - дополнение к Шагу, чтобы задавать промежуточные значения, по умолчанию равен 1.

        &lt;br&gt; &lt;br&gt; &lt;b&gt; Сортировка упражнений &lt;/b&gt;
        &lt;br&gt; \t 1. Если в нумерации внутри занятия сделать &lt;b&gt; пропуск &lt;/b&gt; (001, 003), то при формировании плейлиста на второй день этого упражнения не будет (файл то 002 не указан). Пример:
        &lt;br&gt; \t \t |1 Утро|02 Зарядка|001 суставная_гимнастика.mp4|
        &lt;br&gt; \t \t |1 Утро|02 Зарядка|003 растяжка_гимнастика.mp4 |
        &lt;br&gt; \t 2. Пропусками можно &lt;b&gt; чередовать &lt;/b&gt; разные однотипные занятия (сегодня отжимания, завтра подтягивания), либо планировать дни отдыха (001, 002, 003, 005, 006, 007, 009 - три дня занимаемся, один отдыхаем).
        &lt;br&gt; \t 3. Редактирование в ячейках и пунктах по &lt;b&gt; Длительному нажатию: &lt;/b&gt;
        &lt;br&gt; \t \t - на ячейке с &lt;b&gt; названием файла &lt;/b&gt; - можно задать свое название (меняется только заголовок, имя файла не меняется). Там же можно удалить файл из списка
        &lt;br&gt; \t \t - в ниспадающем списке для &lt;b&gt; Сеанс &lt;/b&gt; - удалить запись
        &lt;br&gt; \t \t - в ниспадающем списке для текущего &lt;b&gt; Упражнения &lt;/b&gt; - удалить запись, либо установить дополнительные параметры:
        &lt;br&gt; \t \t \t - задать &lt;b&gt; позицию &lt;/b&gt; - перейти на определенное видео и начать с него (полезно, если вы хотите повторить упражнение, сделав шаг назад, и затем продолжить дальше)
        &lt;br&gt; \t \t \t - задать, на какой номер &lt;b&gt; сбрасывать &lt;/b&gt;, когда список файлов подошёл к концу (000 или 001)

        &lt;br&gt; Если хочется больше контроля - можно дополнительно включить кнопку &lt;b&gt; Запуск &lt;/b&gt;. Тогда плейлист будет формироваться не только раз в сутки при открытии приложения, а при каждом нажатии на кнопку.
        &lt;br&gt; Кнопку &lt;b&gt; Запуск &lt;/b&gt; можно включить  только через файл настроек:
        &lt;br&gt; \t - после сканирования папки с видеофайлами, в этой же папке появится конфигурационный файл &lt;b&gt; texfit.cfg &lt;/b&gt;
        &lt;br&gt; \t - открыть файл &lt;b&gt; texfit.cfg &lt;/b&gt; в любом текстовом редакторе на телефоне
        &lt;br&gt; \t - найти строку &lt;b&gt; ["button": 0] &lt;/b&gt;, выставить &lt;b&gt; ["button": 1] &lt;/b&gt;
        &lt;br&gt; \t - сохранить файл и выйти. В приложении в Окне настроек сверху появится кнопка &lt;b&gt; Запуск &lt;/b&gt;
    </string>
</resources>